--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "xperiencelab-landing",
+  "name": "react-vite-typescript-tailwind",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "npm run dev",
+    "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
